<resources>
    <string name="app_name">ZOLX</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_text_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_a_account">Create a Account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms &amp; conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_wait">Please wait!</string>
    <string name="btn_submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="btn_update">Update</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">My Products</string>
    <string name="title_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="btn_logout">logout</string>
    <string name="addresses">Addresses</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="add_product">add product</string>
    <string name="add_product_title">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="no_products_has_been_added_yet">No products has been added yet!</string>
    <string name="no_items_found">No items Found!</string>
    <string name="address">Address</string>
    <string name="available_quantity">Available Quantity:</string>
    <string name="product_details">Product Details</string>
    <string name="currently_no_item_in_your_cart">Your cart is empty!</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold_products">Sold Products</string>
    <string name="no_products_sold_yet">No products sold yet!</string>
    <string name="my_cart">My Cart</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_amount">Total Amount:</string>
    <string name="payment_mode">Payment mode:</string>
    <string name="cash_on_delivery">cash on delivery</string>
    <string name="title">Title</string>
    <string name="order_quantity">Order Quantity:</string>
    <string name="order_date">Order Date:</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="items">items</string>
    <string name="upload">Upload</string>
    <string name="quantity">Quantity</string>
    <string name="confirm_your_email_and_we_ll_send_the_instructions">Confirm your email and we\'ll send the instructions.</string>
    <string name="go_to_cart">go to cart</string>
    <string name="add_to_cart">add to cart</string>
    <string name="highlights">Highlights:</string>
    <string name="seller_contact_number">Seller contact number:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="search">Search</string>
    <string name="required">Required*</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="seller_details">Seller Details:</string>
</resources>