<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zolx.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.zolx.ui.fragments.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.zolx.ui.fragments.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_sold_products"
        android:name="com.example.zolx.ui.fragments.SoldProductsFragment"
        android:label="@string/sold_products"
        tools:layout="@layout/fragment_sold_products"/>
</navigation>