<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_home"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />

    <item android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart"
        app:showAsAction="always"
        app:actionLayout="@layout/action_item_layout"
        />
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_person_icon"
        android:title="@string/settings"
        app:showAsAction="always"
        />


</menu>