<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:elevation="5dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/rv_items_style">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/order_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/order_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_date"
                android:textColor="@color/icon_grey"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/order_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/icon_grey"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_mode"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_on_delivery"
                android:textColor="@color/icon_grey"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textColor="@color/glow_green"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/order_total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="#06CD20"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>