<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/header_img"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/auth_screen_background"
            android:scaleType="center"
            >
        </ImageView>
        <ImageView
            android:layout_width="@dimen/app_icon_width"
            android:layout_height="@dimen/app_icon_height"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_gravity="center"
            >
        </ImageView>
    </FrameLayout>
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text">
    </TextView>
    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/et_margin_start"
        android:layout_marginEnd="@dimen/et_margin_end"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        android:background="@drawable/et_style"
        android:padding="@dimen/et_padding"
        android:drawableStart="@drawable/email_icon_style"
        android:drawablePadding="10dp">

    </EditText>
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/et_margin_start"
        android:layout_marginEnd="@dimen/et_margin_end"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        android:background="@drawable/et_style"
        android:padding="@dimen/et_padding"
        android:drawableStart="@drawable/lock_icon_style"
        android:drawablePadding="10dp">
    </EditText>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/clickable_text_size"
        android:layout_marginTop="15dp"
        android:padding="@dimen/clickable_padding"
        >
    </TextView>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:layout_marginTop="30dp"
        android:text="@string/btn_text_login"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/btn_padd_bottom"
        android:paddingTop="@dimen/btn_padd_top"
        android:gravity="center"
        android:layout_marginStart="@dimen/btn_margin_start"
        android:layout_marginEnd="@dimen/btn_margin_end"
        android:backgroundTint="@color/cyan"
        android:background="@drawable/et_style"
        >
    </Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/clickable_text_size"
            android:padding="@dimen/clickable_padding"
            >
        </TextView>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/clickable_text_size"
            android:padding="@dimen/clickable_padding"
            android:textColor="@color/black"
            android:textStyle="bold"
            >
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>