<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CartActivity"
    android:background="@color/background_white"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">
        <TextView
        android:id="@+id/my_cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textColor="@color/white"
        android:gravity="fill_vertical"
        android:textSize="@dimen/title_text"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@color/cyan"
        >
    </TextView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_cart"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        tools:listitem="@layout/item_cart"
        >

    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:id="@+id/no_items_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currently_no_item_in_your_cart"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_cart"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="\u20B9 999"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delivery_charges"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/delivery_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="\u20B9 40"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dotted_lines"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_amount"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="\u20B9 1039"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dotted_lines"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment_mode"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_on_delivery"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/place_order"
            android:textSize="@dimen/btn_text_size"
            android:paddingBottom="@dimen/btn_padd_bottom"
            android:paddingTop="@dimen/btn_padd_top"
            android:gravity="center"
            android:layout_marginStart="@dimen/btn_margin_start"
            android:layout_marginEnd="@dimen/btn_margin_end"
            style="@style/Widget.MaterialComponents.Button"
            >
        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>