<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:background="@color/white">
    <FrameLayout
        android:id="@+id/fp_header_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/auth_screen_background"
            android:scaleType="center"
            >
        </ImageView>

        <ImageView
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <ImageView
            android:layout_width="@dimen/app_icon_width"
            android:layout_height="@dimen/app_icon_height"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_gravity="center"
            >
        </ImageView>
    </FrameLayout>
    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fp_header_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text">
    </TextView>
    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/confirm_your_email_and_we_ll_send_the_instructions"
        android:padding="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        >
    </TextView>
    <EditText
        android:id="@+id/fp_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/et_margin_start"
        android:layout_marginEnd="@dimen/et_margin_end"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_text"
        android:background="@drawable/et_style"
        android:padding="@dimen/et_padding">

    </EditText>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fp_email"
        android:layout_marginTop="30dp"
        android:text="@string/btn_submit"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/btn_padd_bottom"
        android:paddingTop="@dimen/btn_padd_top"
        android:gravity="center"
        android:layout_marginStart="@dimen/btn_margin_start"
        android:layout_marginEnd="@dimen/btn_margin_end"
        android:backgroundTint="@color/cyan"
        android:background="@drawable/et_style"
        >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>